Replace deprecated methods from Jackson 3 with their alternatives